<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_map"
        android:icon="@drawable/ic_map_24dp"
        android:title="@string/action_map"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_probability"
        android:icon="@drawable/ic_assessment_black_24dp"
        android:title="@string/probability"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_notification"
        android:title="@string/menu_item_notification"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_rate"
        android:title="@string/menu_item_rate_app"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_info"
        android:title="@string/menu_item_info"
        app:showAsAction="never" />
</menu>